# lcm-spy-lite

src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/lcmtypes/: bal_robot.lcm  librav_lcm_msgs_BalCommand_t.c  librav_lcm_msgs_BalCommand_t.h  librav_lcm_msgs_BalRawIMU_t.c  librav_lcm_msgs_BalRawIMU_t.h  librav_lcm_msgs_BalRawSpeed_t.c  librav_lcm_msgs_BalRawSpeed_t.h
src/spylite/: CMakeLists.txt  Makefile
